@@ -99,6 +99,7 @@ Content
 - New spell: Ice Breath, creates icicles that deal damage
 - New spell: Incinerate, deals damage over time in a 3x3 area
 - New spell: Bomb, deals damage after a delay in a 3x3 area
+- New spell: Crackle, deals damage in a line and stuns briefly
 - Added a new spooky illusion Enemy
 - New enemies: samurai, ninjas, mummies
 - new bolt cutters weapon
